# rosalind.info

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tmp.out
.github/workflows/: ci.yaml
algorithmic-heights/: 2sum.py  3sum.py  README.md  bfs.py  bins.py  cc.py  dag.py  ddeg.py  deg.py  dij.py  fibo.py  ins.py  inv.py  maj.py  mer.py  ms.py  par.py
algorithmic-heights/test/: rosalind_3sum.txt  rosalind_bfs.txt  rosalind_ddeg.txt  rosalind_inv.txt  rosalind_maj.txt  rosalind_par.txt
bioinformatics-armory/: README.md  bfil.py  frmt.py  ini.py  need.py  orfr.py  phre.py  ptra.py  subo.py
bioinformatics-armory/test/: rosalind_subo.txt
bioinformatics-textbook-track/: .gitignore  README.md  ba1a.py  ba1b.py  ba1d.py  ba1e.py  ba1g.py  ba1h.py  ba1i.py  ba1j.py  ba1k.py  ba1l.py  ba1m.py  ba1n.py  ba2a.py  ba2b.py  ba2c.py  ba2d.py  ba2e.py  ba2f.py  ba2g.py  ba2h.py  ba3a.py  ba3d.py  ba3e.py  ba3g.py  ba3h.py  ba3i.py  ba3j.py  ba3k.py  ba3l.py  ba3m.py  ba4a.py  ba4b.py  ba4c.py  ba4d.py  ba4e.py  ba4f.py  ba4g.py  ba4i.py  (+28 more)
bioinformatics-textbook-track/resources/: genetic_code.yaml
bioinformatics-textbook-track/test/: rosalind_ba1a.txt  rosalind_ba1g.txt  rosalind_ba2a.txt  rosalind_ba2b.txt  rosalind_ba2g.txt  rosalind_ba2h.txt  rosalind_ba3a.txt  rosalind_ba3d.txt  rosalind_ba3h.txt  rosalind_ba3j.txt  rosalind_ba3l.txt  rosalind_ba4j.txt  rosalind_ba5a.txt  rosalind_ba5h.txt  rosalind_ba5j.txt  rosalind_ba5k.txt  rosalind_ba5n.txt  rosalind_ba6d.txt  rosalind_ba6e.txt  rosalind_ba6f.txt  rosalind_ba7b.txt
python-village/: README.md  ini1.py  ini2.py  ini3.py  ini4.py  ini5.py  ini6.py  solve.py
resources/: mass.yaml  pam250.txt
rosalind/: cli.py  helpers.py
rosalind/algorithmic-heights/: 2sum.py  3sum.py  README.md  bfs.py  bins.py  cc.py  dag.py  ddeg.py  deg.py  (+6 more)
template/: new.py  template.txt
tests/: seq_records.yaml  test_rosalind.py  test_solutions.py  uniprot_output.yaml
(+545 files in other folders)
