[tool.poetry]
name = "rosalind"
version = "0.2.0"
description = "Solutions to the Rosalind problems"
authors = ["Dan Halligan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
bio = "^1.4.0"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.10.1"
pytest = "^5.2"
flake8 = "^3.8.4"
pytest-cov = "^2.11.1"
pytest-snapshot = "^0.9.0"
bs4 = "^0.0.1"
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = "tests/snapshots/"

[tool.poetry.scripts]
rosalind = "rosalind.cli:main"
