[tool.poetry]
name = "rosalind"
version = "0.2.0"
description = "Solutions to the Rosalind problems"
authors = ["Dan Halligan"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bio = "^1.4"
typer = "^0.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10"
pytest = "^6.2"
flake8 = "^3.8"
pytest-cov = "^2.11"
pytest-snapshot = "^0.9"
bs4 = "^0.0.1"
black = "^23.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = "tests/snapshots/"

[tool.poetry.scripts]
rosalind = "rosalind.cli:main"
